--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <img src="assets/img/hero.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/hero.jpg" class="assets/img-fluid" alt="">
           </div>
           </div>
         </div>
@@ -103,22 +103,22 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/google1.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/google1.jpg" class="assets/img-fluid" alt="">
           </div>
           <div class="col-lg-4">
-            <img src="assets/img/google2.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/google2.jpg" class="assets/img-fluid" alt="">
           </div>
           <div class="col-lg-4">
-            <img src="assets/img/shopee.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/shopee.jpg" class="assets/img-fluid" alt="">
           </div>
           <div class="col-lg-4">
-            <img src="assets/img/tokped.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/tokped.jpg" class="assets/img-fluid" alt="">
           </div>
           <div class="col-lg-4">
-            <img src="assets/img/lazada.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/lazada.jpg" class="assets/img-fluid" alt="">
           </div>
           <div class="col-lg-4">
-            <img src="assets/img/zalora.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/zalora.jpg" class="assets/img-fluid" alt="">
           </div>
           </div>
         </div>
@@ -136,7 +136,7 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <img src="assets/img/foto_artikel.png" class="assets/img-fluid" alt="">
+            <img src="assets/img/foto_artikel.jpg" class="assets/img-fluid" alt="">
           </div>
           </div>
         </div>
