--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 
               <h4 class="h4 timeline-item-title">SEKOLAH TINGGI TEKNOLOGI BANDUNG</h4>
 
-              <span>2021 — </span>
+              <span>2021 — Present</span>
 
               <p class="timeline-text">
                 Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
