--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://maps.google.com/maps?q=Tanggulun%20Bar.,%20Kec.%20Kalijati,%20Kabupaten%20Subang,%20Jawa%20Barat%2041271&t=&z=13&ie=UTF8&iwloc=&output=embed"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.0623928702216!2d107.4858726!3d-6.5137873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e691345ca72c6bd%3A0x99064987366aa621!2sWarung%20oyox%201!5e0!3m2!1sid!2sid!4v1671687914132!5m2!1sid!2sid"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
