--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Address</button>
           </li>
 
         </ul>
@@ -1147,7 +1147,7 @@
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
-
+<!--
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
@@ -1166,7 +1166,7 @@
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
             </button>
-
+-->
           </form>
 
         </section>
