--- a/index.html
+++ b/index.html
@@ -1166,10 +1166,10 @@
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
             </button>
--->
+
           </form>
 
-        </section>
+        </section>-->
 
       </article>
 
