--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <article class="contact" data-page="Address">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
