--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li>
-
+    <!--
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Address</button>
           </li>
-
+      -->
         </ul>
 
       </nav>
@@ -1133,6 +1133,7 @@
       <!--
         - #CONTACT
       -->
+      <!--
 
       <article class="contact" data-page="Address">
 
@@ -1147,7 +1148,6 @@
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
-<!--
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
@@ -1169,9 +1169,10 @@
 
           </form>
 
-        </section>-->
+        </section>
 
       </article>
+      -->
 
     </div>
 
