--- a/index.html
+++ b/index.html
@@ -618,12 +618,35 @@
               <span>2021 — 2022</span>
 
               <p class="timeline-text">
-                BORN AND BLESSED(BANDUNG)<br>
+                CV. BORN AND BLESSED(BANDUNG)<br>
 
               </p>
 
             </li>
+            <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">STAFF IT - HR</h4>
+
+              <span>2022 — 2023</span>
+
+              <p class="timeline-text">
+                PT. SUNGWON INDOJAYA(SUBANG)<br>
+
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">STAFF IT - WEB DESIGN </h4>
+
+              <span>2023 — Present</span>
+
+              <p class="timeline-text">
+                SKYWAVE TECHNOLOGIES(WATTHANA)<br>
+
+              </p>
+
+            </li>
           </ol>
 
         </section>
