--- a/index.html
+++ b/index.html
@@ -608,6 +608,9 @@
               <p class="timeline-text">
                 SMK MUHAMMADIYAH (PURWAKARTA)<br>
               </p>
+              <p class="timeline-text">
+                YAYASAN ALFIAH NU (PURWAKARTA)<br>
+              </p>
 
             </li>
 
