--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             </li>
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">STAFF IT - WEB DESIGN </h4>
+              <h4 class="h4 timeline-item-title">STAFF IT - WEB DESIGNER </h4>
 
               <span>2023 — Present</span>
 
